new parameter -encoding one line comment for service and for operations